fixed alignment of the created events class; aligns with bookmark class

--- a/client/src/components/pages/profile/style.css
+++ b/client/src/components/pages/profile/style.css
@@ -1,12 +1,16 @@
 .sideBarStyle {
     /* background-color: lightgrey; */
     justify-content: flex-start;
-
 }
 
 .mainStyle {
-    /* background-color: lightgrey; */
-    justify-content: flex-end;
+    justify-content: flex-start;
+}
+
+.createdEventsStyle {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 }
 
 .profileContainer {
